--- a/Customer_personality_segmentation_py.ipynb
+++ b/Customer_personality_segmentation_py.ipynb
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "id": "4987170f",
    "metadata": {},
    "outputs": [],
@@ -1108,8 +1108,7 @@
     "\n",
     "# Save OrdinalEncoder\n",
     "with open(\"encoder.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(cps_oe, f)\n",
-    "\n"
+    "    pickle.dump(cps_oe, f)\n"
    ]
   }
  ],
